@@ -1,3 +1,12 @@
+2004-10-24  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclCmdIL.c:
+	* generic/tclExecute.c:
+	* generic/tclInt.h:
+	* generic/tclTrace.c: defined new macros to get/set the flags of 
+	variables. The only files that still access the flag values
+	directly are tclCompCmds.c, tclCompile.c, tclProc.c and tclVar.c
+
 2004-10-24  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclBasic.c (Tcl_LogCommandInfo,Tcl_AddObjErrorInfo):
